# AgenticV1

./: agent-service.rar
agent-service/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent-service/app/: main.py
agent-service/app/agents/: base.py  delegation_engine.py  registry.py  router_agent.py
agent-service/app/api/: dependencies.py
agent-service/app/application/: __init__.py  confidence.py  delegation.py  escalation.py  explain.py  language.py  ministry_classifier.py  orchestration_service.py  router.py  validation.py
agent-service/app/core/: config.py  errors.py  logging.py  tracing.py
agent-service/app/domain/: __init__.py  contracts.py  models.py
agent-service/app/infrastructure/: __init__.py  bootstrap.py  clients.py  llm.py
agent-service/app/llm/: base.py  gateway.py
agent-service/app/orchestration/: clarification.py  decision_trace.py  escalation.py  pipeline.py  repair_loop.py
agent-service/app/schemas/: artifacts.py  common.py  confidence_models.py  delegate_models.py  errors.py  explain_models.py  query_models.py  validate_models.py
agent-service/app/tools/: base_client.py  governance_client.py  knowledge_client.py  workflow_client.py
agent-service/app/utils/: ids.py  text.py
agent-service/docs/: ASSUMPTIONS.md  LLM_Context.md  api_contracts.md  architecture.md  clarification_policy.md  confidence_rubric.md  decision_trace_spec.md  escalation_payload.md  flow_diagram_mapping.md  validation_policy.md
agent-service/tests/fixtures/: governance_guardrail_block.json  governance_guardrail_pass.json  (+5 more)
(+44 files in other folders)
